k8s/client-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
# names the object
    name: client-deployment
spec:
# number of pods this deployment is running
    replicas: 3
# master or some program in master creates the pod and we select it
    selector:
        matchLabels:
            component: web
# template applies to every pod this deployment runs/monitors
    template:
        metadata:
            labels:
                component: web
        spec:
            containers:
                - name: client
                  image: redridinghood/docker-complex-fib-client
                  ports:
                    - containerPort: 3000
