k8s/postgres-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
# names the object
    name: postgres-deployment
spec:
# number of pods this deployment is running
    replicas: 1
# master or some program in master creates the pod and we select it
    selector:
        matchLabels:
            component: postgres
# template applies to every pod this deployment runs/monitors
    template:
        metadata:
            labels:
                component: postgres
        spec:
            volumes:
                - name: postgres-storage
                  persistentVolumeClaim:
                    claimName: database-persistent-volume-claim
            containers:
                - name: postgres
                  image: postgres
                  ports:
                    - containerPort: 5432
                  volumeMounts:
                    - name: postgres-storage
# the actual data postgres writes to disk
                      mountPath: /var/lib/postgresql/data
# folder name inside the mountPath. Postgres specific value.
                      subPath: postgres
