k8s/redis-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
# names the object
    name: redis-deployment
spec:
# number of pods this deployment is running
    replicas: 1
# master or some program in master creates the pod and we select it
    selector:
        matchLabels:
            component: redis
# template applies to every pod this deployment runs/monitors
    template:
        metadata:
            labels:
                component: redis
        spec:
            containers:
                - name: redis
                  image: redis
                  ports:
                    - containerPort: 6379
 

# there is no need for a matching Service file because no
# requests go into the worker. Service is only needed if there are 
# incoming requests
