k8s/server-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
# names the object
    name: server-deployment
spec:
# number of pods this deployment is running
    replicas: 3
# master or some program in master creates the pod and we select it
    selector:
        matchLabels:
            component: server
# template applies to every pod this deployment runs/monitors
    template:
        metadata:
            labels:
                component: server
        spec:
            containers:
                - name: server
                  image: redridinghood/docker-complex-fib-server
                  ports:
                    - containerPort: 5000
