k8s/worker-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
# names the object
    name: worker-deployment
spec:
# number of pods this deployment is running
    replicas: 1
# master or some program in master creates the pod and we select it
    selector:
        matchLabels:
            component: worker
# template applies to every pod this deployment runs/monitors
    template:
        metadata:
            labels:
                component: worker
        spec:
            containers:
                - name: worker
                  image: redridinghood/docker-complex-fib-worker
