k8s/client-cluster-ip-service.yaml
apiVersion: v1

kind: Service
metadata:
    name: client-cluster-ip-service

# ClusterP gives access to objects from objects that are already 
# in the cluster -- no traffic is comming from outside
spec:
    type: ClusterIP
    selector:
        component: web
    ports:
        - port: 3000
          targetPort: 3000
