k8s/postgres-cluster-ip-service.yaml
apiVersion: v1

kind: Service
metadata:
    name: postgres-cluster-ip-service

# ClusterP gives access to objects from objects that are already 
# in the cluster -- no traffic is comming from outside
spec:
    type: ClusterIP
    selector:
        component: postgres
    ports:
        - port: 5432
          targetPort: 5432
