k8s/redis-cluster-ip-service.yaml
apiVersion: v1

kind: Service
metadata:
    name: redis-cluster-ip-service

# ClusterP gives access to objects from objects that are already 
# in the cluster -- no traffic is comming from outside
spec:
    type: ClusterIP
    selector:
        component: redis
    ports:
        - port: 6379
          targetPort: 6379
