k8s/server-cluster-ip-service.yaml
apiVersion: v1

kind: Service
metadata:
    name: server-cluster-ip-service

# ClusterP gives access to objects from objects that are already 
# in the cluster -- no traffic is comming from outside
spec:
    type: ClusterIP
    selector:
        component: server
    ports:
        - port: 5000
          targetPort: 5000
